[project]
name = "cligame"
version = "0.2.3"
description = """
Python library with no extra dependencies \
to easily create CLI interactive games to learn or practice new concepts, \
without having to worry about the game related aspects such as score or timers.
"""
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [
  { name = "Alejandro Rodriguez", email = "alex.rodriguez.oro@gmail.com" },
]
keywords = [
  "cli",
  "cligame",
  "game",
  "interactive",
  "learn",
  "python",
  "terminal",
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Alex23rodriguez/cligame"
Repository = "https://github.com/Alex23rodriguez/cligame"

[project.scripts]
cligame = "cligame:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
